Added: Babel, extract plugin

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "Главная": "Main",
+  "Главная страница": "Главная страница",
   "О сайте": "About",
   "Перевести": "Translate",
   "Развернуть": "Expand",
