--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
   "Главная": "Главная",
+  "Главная страница": "Главная страница",
   "О сайте": "О сайте",
   "Перевести": "Перевести",
   "Развернуть": "Развернуть",
