Added: stylelint, i18n plugin for eslint, fixed: errors

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "О сайте": "About",
   "Перевести": "Translate",
   "Развернуть": "Expand",
-  "Свернуть": "Collapse"
+  "Свернуть": "Collapse",
+  "Страница не найдена": "Page not found"
 }
