--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
   "О сайте": "О сайте",
   "Перевести": "Перевести",
   "Развернуть": "Развернуть",
-  "Свернуть": "Свернуть"
+  "Свернуть": "Свернуть",
+  "Страница не найдена": "Страница не найдена"
 }
