Added: error boundary

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,7 @@
   "Перевести": "Translate",
   "Развернуть": "Expand",
   "Свернуть": "Collapse",
-  "Страница не найдена": "Page not found"
+  "Страница не найдена": "Page not found",
+  "Что-то пошло не так": "Something went wrong",
+  "Обновить страницу": "Refresh the page"
 }
