--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,7 @@
   "Перевести": "Перевести",
   "Развернуть": "Развернуть",
   "Свернуть": "Свернуть",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "Что-то пошло не так": "Что-то пошло не так",
+  "Обновить страницу": "Обновить страницу"
 }
