Added: langs translations

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,7 @@
   "Свернуть": "Collapse",
   "Страница не найдена": "Page not found",
   "Что-то пошло не так": "Something went wrong",
-  "Обновить страницу": "Refresh the page"
+  "Обновить страницу": "Refresh the page",
+  "Язык": "English",
+  "Короткий язык": "En"
 }
