--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,7 @@
   "Свернуть": "Свернуть",
   "Страница не найдена": "Страница не найдена",
   "Что-то пошло не так": "Что-то пошло не так",
-  "Обновить страницу": "Обновить страницу"
+  "Обновить страницу": "Обновить страницу",
+  "Язык": "Русский",
+  "Короткий язык": "Ру"
 }
