--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,6 @@
   "Что-то пошло не так": "Something went wrong",
   "Обновить страницу": "Refresh the page",
   "Язык": "English",
-  "Короткий язык": "En"
+  "Короткий язык": "En",
+  "Войти": "Sign in"
 }
