--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,6 @@
   "Что-то пошло не так": "Что-то пошло не так",
   "Обновить страницу": "Обновить страницу",
   "Язык": "Русский",
-  "Короткий язык": "Ру"
+  "Короткий язык": "Ру",
+  "Войти": "Войти"
 }
