--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,9 @@
   "Обновить страницу": "Обновить страницу",
   "Язык": "Русский",
   "Короткий язык": "Ру",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Имя пользователя": "Имя пользователя",
+  "Введите имя пользователя": "Введите имя пользователя",
+  "Пароль": "Пароль",
+  "Введите пароль": "Введите пароль"
 }
