--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,18 +1,19 @@
 {
+  "Введите имя пользователя": "Введите имя пользователя",
+  "Введите пароль": "Введите пароль",
+  "Войти": "Войти",
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
   "Главная": "Главная",
   "Главная страница": "Главная страница",
+  "Имя пользователя": "Имя пользователя",
+  "Короткий язык": "Ру",
   "О сайте": "О сайте",
+  "Обновить страницу": "Обновить страницу",
+  "Пароль": "Пароль",
   "Перевести": "Перевести",
   "Развернуть": "Развернуть",
   "Свернуть": "Свернуть",
   "Страница не найдена": "Страница не найдена",
   "Что-то пошло не так": "Что-то пошло не так",
-  "Обновить страницу": "Обновить страницу",
-  "Язык": "Русский",
-  "Короткий язык": "Ру",
-  "Войти": "Войти",
-  "Имя пользователя": "Имя пользователя",
-  "Введите имя пользователя": "Введите имя пользователя",
-  "Пароль": "Пароль",
-  "Введите пароль": "Введите пароль"
+  "Язык": "Русский"
 }
