Added: profile state, sidebar item components, some consts

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,6 +11,7 @@
   "Обновить страницу": "Refresh the page",
   "Пароль": "Password",
   "Перевести": "Translate",
+  "Профиль": "Profile",
   "Развернуть": "Expand",
   "Свернуть": "Collapse",
   "Страница не найдена": "Page not found",
