--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,6 +11,7 @@
   "Обновить страницу": "Обновить страницу",
   "Пароль": "Пароль",
   "Перевести": "Перевести",
+  "Профиль": "Профиль",
   "Развернуть": "Развернуть",
   "Свернуть": "Свернуть",
   "Страница не найдена": "Страница не найдена",
