Fixed: typings, added: profile, fixed: tests

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,6 +13,7 @@
   "Перевести": "Translate",
   "Профиль": "Profile",
   "Развернуть": "Expand",
+  "Редактировать": "Edit",
   "Свернуть": "Collapse",
   "Страница не найдена": "Page not found",
   "Что-то пошло не так": "Something went wrong",
