--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,6 +13,7 @@
   "Перевести": "Перевести",
   "Профиль": "Профиль",
   "Развернуть": "Развернуть",
+  "Редактировать": "Редактировать",
   "Свернуть": "Свернуть",
   "Страница не найдена": "Страница не найдена",
   "Что-то пошло не так": "Что-то пошло не так",
