--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,7 @@
   "Введите имя пользователя": "Введите имя пользователя",
   "Введите пароль": "Введите пароль",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
   "Главная": "Главная",
   "Главная страница": "Главная страница",
@@ -9,13 +10,19 @@
   "Короткий язык": "Ру",
   "О сайте": "О сайте",
   "Обновить страницу": "Обновить страницу",
+  "Отменить": "Отменить",
   "Пароль": "Пароль",
   "Перевести": "Перевести",
+  "Переключить тему": "Переключить тему",
+  "Попробуйте_обновить_страницу": "Попробуйте обновить страницу",
   "Профиль": "Профиль",
   "Развернуть": "Развернуть",
   "Редактировать": "Редактировать",
   "Свернуть": "Свернуть",
+  "Сохранить": "Сохранить",
   "Страница не найдена": "Страница не найдена",
   "Что-то пошло не так": "Что-то пошло не так",
-  "Язык": "Русский"
+  "Язык": "Русский",
+  "Выбранная валюта": "Выбранная валюта",
+  "Страна": "Страна"
 }
