--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,5 +24,10 @@
   "Что-то пошло не так": "Что-то пошло не так",
   "Язык": "Русский",
   "Выбранная валюта": "Выбранная валюта",
-  "Страна": "Страна"
+  "Страна": "Страна",
+  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
+  "Данные не указаны": "Данные не указаны",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Некорректный возраст": "Некорректный возраст",
+  "Некорректный регион": "Некорректный регион"
 }
