--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -29,5 +29,6 @@
   "Данные не указаны": "Данные не указаны",
   "Имя и фамилия обязательны": "Имя и фамилия обязательны",
   "Некорректный возраст": "Некорректный возраст",
-  "Некорректный регион": "Некорректный регион"
+  "Некорректный регион": "Некорректный регион",
+  "Статьи": "Статьи"
 }
