--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -30,5 +30,7 @@
   "Имя и фамилия обязательны": "Имя и фамилия обязательны",
   "Некорректный возраст": "Некорректный возраст",
   "Некорректный регион": "Некорректный регион",
-  "Статьи": "Статьи"
+  "Статьи": "Статьи",
+  "Копировать": "Копировать",
+  "Скопировано": "Скопировано"
 }
