Added: new translations

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -31,5 +31,7 @@
   "Некорректный регион": "Incorrect country",
   "Статьи": "Articles",
   "Копировать": "Copy",
-  "Скопировано": "Copied"
+  "Скопировано": "Copied",
+  "Комментарии": "Comments",
+  "Пока нет комментариев": "No comments yet"
 }
