--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -32,5 +32,7 @@
   "Некорректный регион": "Некорректный регион",
   "Статьи": "Статьи",
   "Копировать": "Копировать",
-  "Скопировано": "Скопировано"
+  "Скопировано": "Скопировано",
+  "Комментарии": "Комментарии",
+  "Пока нет комментариев": "Пока нет комментариев"
 }
