Created: Article Comments ui and logic

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -33,5 +33,7 @@
   "Копировать": "Copy",
   "Скопировано": "Copied",
   "Комментарии": "Comments",
-  "Пока нет комментариев": "No comments yet"
+  "Пока нет комментариев": "No comments yet",
+  "Добавить комментарий": "Add comment",
+  "Отправить": "Send"
 }
