--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -34,5 +34,7 @@
   "Копировать": "Копировать",
   "Скопировано": "Скопировано",
   "Комментарии": "Комментарии",
-  "Пока нет комментариев": "Пока нет комментариев"
+  "Пока нет комментариев": "Пока нет комментариев",
+  "Добавить комментарий": "Добавить комментарий",
+  "Отправить": "Отправить"
 }
