--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -35,5 +35,6 @@
   "Комментарии": "Comments",
   "Пока нет комментариев": "No comments yet",
   "Добавить комментарий": "Add comment",
-  "Отправить": "Send"
+  "Отправить": "Send",
+  "Читать далее": "Read more"
 }
