--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -36,5 +36,6 @@
   "Комментарии": "Комментарии",
   "Пока нет комментариев": "Пока нет комментариев",
   "Добавить комментарий": "Добавить комментарий",
-  "Отправить": "Отправить"
+  "Отправить": "Отправить",
+  "Читать далее": "Читать далее"
 }
