Added: private routes with required roles

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -36,5 +36,6 @@
   "Пока нет комментариев": "No comments yet",
   "Добавить комментарий": "Add comment",
   "Отправить": "Send",
-  "Читать далее": "Read more"
+  "Читать далее": "Read more",
+  "У вас нет доступа к этой странице": "You don't have access to this page"
 }
