--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -37,5 +37,6 @@
   "Пока нет комментариев": "Пока нет комментариев",
   "Добавить комментарий": "Добавить комментарий",
   "Отправить": "Отправить",
-  "Читать далее": "Читать далее"
+  "Читать далее": "Читать далее",
+  "У вас нет доступа к этой странице": "У вас нет доступа к этой странице"
 }
