--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -1,4 +1,7 @@
 {
     "Статья не найдена": "Статья не найдена",
-    "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи"
+    "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи",
+    "Просмотров_one": "{{count}} просмотр",
+    "Просмотров_few": "{{count}} просмотра",
+    "Просмотров_many": "{{count}} просмотров"
 }
