--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,5 +38,6 @@
     "Добавить комментарий": "Add comment",
     "Отправить": "Send",
     "Читать далее": "Read more",
-    "У вас нет доступа к этой странице": "You don't have access to this page"
+    "У вас нет доступа к этой странице": "You don't have access to this page",
+    "Наверх": "To top"
 }
