--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -39,5 +39,6 @@
     "Добавить комментарий": "Добавить комментарий",
     "Отправить": "Отправить",
     "Читать далее": "Читать далее",
-    "У вас нет доступа к этой странице": "У вас нет доступа к этой странице"
+    "У вас нет доступа к этой странице": "У вас нет доступа к этой странице",
+    "Наверх": "Наверх"
 }
